import("//build/config/android/rules.gni")
import("//components/spellcheck/spellcheck_build_features.gni")
import("//printing/buildflags/buildflags.gni")

java_cpp_enum("browser_enums") {
  sources = [
    "bv_settings.h",
    "bv_renderer_priority.h",
    "permission/bv_permission_request.h",
  ]
}

source_set("browser") {
  sources = [
    "android_protocol_handler.cc",
    "android_protocol_handler.h",
    "bv_autofill_client.cc",
    "bv_autofill_client.h",
    "bv_browser_context.cc",
    "bv_browser_context.h",
    "bv_browser_main_parts.cc",
    "bv_browser_main_parts.h",
    "bv_browser_permission_request_delegate.h",
    "bv_browser_policy_connector.cc",
    "bv_browser_policy_connector.h",
    "bv_browser_process.cc",
    "bv_browser_process.h",
    "bv_content_browser_client.cc",
    "bv_content_browser_client.h",
    "bv_content_browser_client_receiver_bindings.cc",
    "bv_contents.cc",
    "bv_contents.h",
    "bv_contents_client_bridge.cc",
    "bv_contents_client_bridge.h",
    "bv_contents_io_thread_client.cc",
    "bv_contents_io_thread_client.h",
    "bv_cookie_access_policy.cc",
    "bv_cookie_access_policy.h",
    "bv_dark_mode.cc",
    "bv_dark_mode.h",
    "bv_devtools_manager_delegate.cc",
    "bv_devtools_manager_delegate.h",
    "bv_devtools_server.cc",
    "bv_devtools_server.h",
    "bv_download_manager_delegate.cc",
    "bv_download_manager_delegate.h",
    "bv_feature_list_creator.cc",
    "bv_feature_list_creator.h",
    "bv_field_trials.h",
    "bv_field_trials.cc",
    "bv_form_database.cc",
    "bv_form_database_service.cc",
    "bv_form_database_service.h",
    "bv_javascript_dialog_manager.cc",
    "bv_javascript_dialog_manager.h",
    "bv_media_url_interceptor.cc",
    "bv_media_url_interceptor.h",
    "bv_pdf_exporter.cc",
    "bv_pdf_exporter.h",
    "bv_permission_manager.cc",
    "bv_permission_manager.h",
    "bv_pref_names.cc",
    "bv_pref_names.h",
    "bv_print_manager.cc",
    "bv_print_manager.h",
    "bv_quota_manager_bridge.cc",
    "bv_quota_manager_bridge.h",
    "bv_render_process.cc",
    "bv_render_process.h",
    "bv_resource_context.cc",
    "bv_resource_context.h",
    "bv_settings.cc",
    "bv_settings.h",
    "bv_ssl_host_state_delegate.cc",
    "bv_ssl_host_state_delegate.h",
    "bison_variations_seed_bridge.cc",
    "bison_variations_seed_bridge.h",
    "bv_web_contents_delegate.cc",
    "bv_web_contents_delegate.h",
    # "bv_web_ui_controller_factory.cc",
    # "bv_web_ui_controller_factory.h",
    "bv_quota_permission_context.cc",
    "bv_quota_permission_context.h",
    "content_view_render_view.cc",
    "content_view_render_view.h",
    "cookie_manager.cc",
    "cookie_manager.h",
    "find_helper.cc",
    "find_helper.h",
    "icon_helper.cc",
    "icon_helper.h",
    # "input_stream.cc",
    # "input_stream.h",
    "js_java_interaction/bv_web_message_host_factory.cc",
    "js_java_interaction/bv_web_message_host_factory.h",
    "js_java_interaction/js_reply_proxy.cc",
    "js_java_interaction/js_reply_proxy.h",
    "scoped_add_feature_flags.cc",
    "scoped_add_feature_flags.h",
    "bv_browser_terminator.cc",
    "bv_browser_terminator.h",
    "bv_render_process_gone_delegate.h",
    "bv_http_auth_handler.cc",
    "bv_http_auth_handler.h",

    # network_service
    # "network_service/android_stream_reader_url_loader.cc",
    # "network_service/android_stream_reader_url_loader.h",
    "network_service/bv_network_change_notifier.cc",
    "network_service/bv_network_change_notifier.h",
    "network_service/bv_network_change_notifier_factory.cc",
    "network_service/bv_network_change_notifier_factory.h",
    "network_service/bv_proxy_config_monitor.cc",
    "network_service/bv_proxy_config_monitor.h",
    "network_service/bv_proxying_restricted_cookie_manager.cc",
    "network_service/bv_proxying_restricted_cookie_manager.h",
    "network_service/bv_proxying_url_loader_factory.cc",
    "network_service/bv_proxying_url_loader_factory.h",
    "network_service/bv_url_loader_throttle.cc",
    "network_service/bv_url_loader_throttle.h",
    "network_service/bv_web_resource_intercept_response.cc",
    "network_service/bv_web_resource_intercept_response.h",
    "network_service/bv_web_resource_override_resquest.cc",
    "network_service/bv_web_resource_override_resquest.h",
    "network_service/bv_web_resource_request.cc",
    "network_service/bv_web_resource_request.h",
    # "network_service/bv_web_resource_response.cc",
    # "network_service/bv_web_resource_response.h",
    # "network_service/input_stream_reader.cc",
    # "network_service/input_stream_reader.h",
    "network_service/net_helpers.cc",
    "network_service/net_helpers.h",
    "permission/bv_permission_request.cc",
    "permission/bv_permission_request.h",
    "permission/bv_permission_request_delegate.cc",
    "permission/bv_permission_request_delegate.h",
    "permission/media_access_permission_request.cc",
    "permission/media_access_permission_request.h",
    "permission/permission_callback.h",
    "permission/permission_request_handler.cc",
    "permission/permission_request_handler.h",
    "permission/permission_request_handler_client.cc",
    "permission/permission_request_handler_client.h",
    "permission/simple_permission_request.cc",
    "permission/simple_permission_request.h",
    "renderer_host/bv_render_view_host_ext.cc",
    "renderer_host/bv_render_view_host_ext.h",
    "renderer_host/auto_login_parser.cc",
    "renderer_host/auto_login_parser.h",
    "state_serializer.cc",
    "state_serializer.h",
  ]

  deps = [
    # "metrics",
    "//bison:bison_jni_headers",
    "//bison/browser/lifecycle",
    "//bison/common",
    "//bison/common:mojom",
    "//base",
    "//components/android_autofill/browser:android",
    "//components/autofill/content/browser",
    "//components/cdm/browser",
    "//components/content_capture/android",
    "//components/content_capture/browser",
    "//components/embedder_support:browser_util",
    "//components/embedder_support/android:util",
    "//components/embedder_support/origin_trials",
    "//components/favicon_base:favicon_base",
    "//components/flags_ui",
    "//components/keyed_service/content",
    "//components/optimization_guide/core:bloomfilter",
    "//components/profile_metrics",
    "//components/crash/android:crashpad_main",
    "//components/crash/content/browser",
    "//components/crash/core/app",
    "//components/embedder_support/android:web_contents_delegate",
    "//components/embedder_support/android/metrics",
    "//components/google/core/common",
    "//components/heap_profiling/multi_process",
    "//components/js_injection/browser",
    "//components/js_injection/common",
    "//components/js_injection/common:common_mojom",
    "//components/navigation_interception",
    "//components/page_load_metrics/browser",
    "//components/permissions",
    "//components/policy:generated",
    "//components/policy/content/",
    "//components/policy/core/browser",
    "//components/pref_registry",
    "//components/prefs",
    "//components/security_interstitials/content:security_interstitial_page",
    "//components/security_interstitials/core",
    "//components/services/heap_profiling/public/cpp",
    "//components/spellcheck:buildflags",
    "//components/tracing:background_tracing_metrics_provider",
    "//components/tracing:background_tracing_utils",
    "//components/tracing:startup_tracing",
    "//components/url_formatter",
    "//components/user_prefs",
    "//components/variations",
    "//components/variations/service",
    "//components/version_info",
    "//components/version_info/android:channel_getter",
    "//components/visitedlink/browser",
    "//components/webdata/common",
    "//content/public/browser",
    "//media/mojo:buildflags",
    "//services/cert_verifier/public/mojom",
    "//services/network/public/mojom",
    "//services/proxy_resolver:lib",
    "//third_party/blink/public/common",
    "//third_party/blink/public/mojom:mojom_core",
    "//third_party/blink/public/mojom:mojom_platform",
    "//third_party/crashpad/crashpad/client",
    "//ui/android",
    "//ui/display/util:util",
    "//ui/gl",
    "//ui/resources",
    "//ui/touch_selection",
    "//url:gurl_android",
  ]

  if (enable_basic_printing) {
    deps += [
      "//components/printing/browser",
      "//components/printing/common",
      "//components/printing/common:mojo_interfaces",
      "//printing",
    ]
  }

  if (enable_spellcheck) {
    deps += [ "//components/spellcheck/browser" ]
  }

  configs += [
    "//tools/v8_context_snapshot:use_v8_context_snapshot",
    "//v8:external_startup_data",
  ]
}
