import("//build/config/android/rules.gni")
import("//mojo/public/tools/bindings/mojom.gni")

mojom("common_mojom") {
  sources = [
    "js_java_interaction/interfaces.mojom",
  ]

  public_deps = [
    "//mojo/public/mojom/base",
    "//services/network/public/mojom:mojom",
  ]
}

source_set("common") {
  sources = [
    "bv_content_client.cc",
    "bv_content_client.h",
    "bv_descriptors.h",
    "bv_features.cc",
    "bv_features.h",
    "bv_hit_test_data.cc",
    "bv_hit_test_data.h",
    "bison_view_message_generator.cc",
    "bison_view_message_generator.h",
    "devtools_instrumentation.h",
    "render_view_messages.cc",
    "render_view_messages.h",
    "url_constants.cc",
    "url_constants.h",
    "bv_switches.cc",
    "bv_switches.h",
    "bv_resource_bundle.cc",
    "bv_resource_bundle.h",
    "bv_media_drm_bridge_client.cc",
    "bv_media_drm_bridge_client.h",
  ]

  deps = [
    "//base",
    "//content/public/common",
    "//ipc",
    "//ui/base",

    "//url",
  ]
}
