import("//components/gwp_asan/buildflags/buildflags.gni")
import("//components/spellcheck/spellcheck_build_features.gni")

source_set("lib") {
  sources = [
    "bv_library_loader.cc",
    "bv_library_loader.h",
    "bv_main_delegate.cc",
    "bv_main_delegate.h",
  ]

  deps = [
    "//bison/browser",
    "//bison/common",
    "//bison/gpu",
    "//bison/renderer",

    # chromium deps
    "//base",
    "//cc/base",
    "//components/autofill/core/common",
    "//components/crash/core/common",
    "//components/embedder_support:embedder_support",
    "//components/gwp_asan/buildflags",
    "//components/metrics",
    "//components/power_scheduler",
    "//components/safe_browsing/android:safe_browsing_api_handler",
    "//components/services/heap_profiling/public/cpp",
    "//components/spellcheck:buildflags",
    "//components/translate/core/common",
    "//components/variations",
    "//components/version_info",
    "//components/version_info/android:channel_getter",
    "//components/viz/common",
    "//content/public/app",
    "//content/public/browser",
    "//content/public/common",
    "//content/public/common:content_descriptor_keys",
    "//device/base:base",
    "//gin",
    "//gpu/command_buffer/service",
    "//gpu/config",
    "//media",
    "//media:media_buildflags",
    "//third_party/blink/public/common:headers",
    "//ui/base",
    "//ui/events:gesture_detection",
  ]

  if (enable_gwp_asan) {
    deps += [ "//components/gwp_asan/client" ]
  }

  if (enable_spellcheck) {
    deps += [ "//components/spellcheck/common" ]
  }
}

source_set("webview_entry_point") {
  deps = [
    ":lib",
    "//base",
  ]
  sources = [ "bv_entry_point.cc" ]
}
