source_set("renderer") {
  sources = [
    "bison_content_renderer_client.cc",
    "bison_content_renderer_client.h",
    "bison_content_settings_client.cc",
    "bison_content_settings_client.h",
    "bison_key_systems.cc",
    "bison_key_systems.h",
    "bison_print_render_frame_helper_delegate.cc",
    "bison_print_render_frame_helper_delegate.h",
    "bison_render_frame_ext.cc",
    "bison_render_frame_ext.h",
    "bison_render_thread_observer.cc",
    "bison_render_thread_observer.h",
    "bison_render_view_ext.cc",
    "bison_render_view_ext.h",
    "js_java_interaction/js_binding.cc",
    "js_java_interaction/js_binding.h",
    "js_java_interaction/js_java_configurator.cc",
    "js_java_interaction/js_java_configurator.h",
    "print_render_frame_observer.cc",
    "print_render_frame_observer.h",
  ]

  deps = [
    "//base",
    "//bison/common",
    "//bison/common:common_mojom",
    "//components/autofill/content/renderer",
    "//components/cdm/renderer",
    "//components/content_capture/common",
    "//components/content_capture/renderer",
    "//components/page_load_metrics/renderer",
    "//components/printing/common",
    "//components/printing/renderer",
    "//components/safe_browsing:features",
    "//components/safe_browsing/common",
    "//components/safe_browsing/renderer:throttles",
    "//components/visitedlink/renderer",
    "//content/public/child",
    "//content/public/common",
    "//content/public/renderer",
    "//gin",
    "//third_party/blink/public:blink",
    "//ui/base",
    "//url",
    "//v8",
  ]
}
