import("//bison/build/aar.gni")
import("//bison/config.gni")
import("//build/config/android/config.gni")
import("//build/config/android/rules.gni")
import("//third_party/icu/config.gni")
import("//tools/v8_context_snapshot/v8_context_snapshot.gni")

testonly = true

group("shell") {
  deps = [ ":bison_shell_apk" ]
}

android_apk("bison_shell_apk") {
  testonly = true
  sources = [
    "java/im/shimo/bison/shell/BisonShellApp.java",
    "java/im/shimo/bison/shell/BisonShellMainActivity.java",
    # "java/im/shimo/bison/test/BvJUnit4ClassRunner.java",
    "java/im/shimo/bison/test/BvTestRunnerActivity.java",
  ]

  apk_name = "BisonApk"
  android_manifest = "AndroidManifest.xml"
  min_sdk_version = default_min_sdk_version
  target_sdk_version = android_sdk_version
  product_config_java_packages = [ "im.shimo.bison" ]

  command_line_flags_file = "bison-view-command-line"

  deps = [
    ":bison_shell_assets",
    ":bison_shell_resources",
    "//bison:bison_java",

    # chromium
    "//base:base_java",
    "//base:base_java_test_support",
    "//content/public/android:content_java",
    "//third_party/androidx:androidx_annotation_annotation_java",
    "//third_party/junit:junit",
  ]
  shared_libraries = [ "//bison:libbison_view" ]
}

android_resources("bison_shell_resources") {
  sources = [
    "res/drawable/progress.xml",
    "res/layout/main_activity.xml",
    "res/values/strings.xml",
  ]
}

android_assets("bison_shell_assets") {
  sources = [
    "assets/asset_file.html",
    "assets/asset_icon.png",
    "assets/autofill.html",
    "assets/cookie_test.html",
    "assets/cors.html",
    "assets/full_screen_video.js",
    "assets/full_screen_video_inside_div_test.html",
    "assets/full_screen_video_test.html",
    "assets/full_screen_video_test_not_preloaded.html",
    "assets/key-system-test.html",
    "assets/star.svg",
    "assets/star.svgz",
    "assets/video.webm",
    "assets/visual_state_during_fullscreen_test.html",
    "assets/visual_state_on_page_commit_visible_test.html",
    "assets/visual_state_waits_for_js_detached_test.html",
    "assets/visual_state_waits_for_js_test.html",
    "assets/dark_theme/index.html",
    "assets/dark_theme/main.js",
    "assets/dark_theme/style.css",
  ]

  deps = [
    "//bison:bison_icu_assets",
    "//bison:bison_v8_snapshot_assets",
    "//bison:locale_pak_assets",
    "//bison:pak_file_assets",
  ]
}
