
import("//build/config/android/rules.gni")
import("//testing/test.gni")
import("//tools/v8_context_snapshot/v8_context_snapshot.gni")

testonly = true
group("test") {
  deps = [
    # ":android_webview_junit_tests",
    ":bison_view_unittests",
  ]
}



test("bison_view_unittests") {
  deps = [
    ":bison_view_unittests_assets",
    ":bison_view_unittests_java",
    ":bison_view_unittests_jni",
    "//bison/browser",
    "//bison/browser/lifecycle",
    "//bison/common",
    "//base/test:test_support",
    "//components/autofill/core/browser",
    "//components/metrics",
    "//components/prefs:prefs",
    "//components/prefs:test_support",
    "//content:content",
    "//content/test:test_support",
    "//mojo/core/embedder",
    "//net:net",
    "//net:test_support",
    "//services/network:test_support",
    "//ui/base:ui_base_jni_headers",
    "//ui/gl",
    "//ui/gl:test_support",
  ]

  sources = [
    "../browser/bv_browser_context_unittest.cc",
    "../browser/bv_content_browser_client_unittest.cc",
    "../browser/bv_contents_client_bridge_unittest.cc",
    "../browser/bv_form_database_service_unittest.cc",
    "../browser/bv_media_url_interceptor_unittest.cc",
    "../browser/bv_permission_manager_unittest.cc",
    "../browser/input_stream_unittest.cc",
    "../browser/lifecycle/bv_contents_lifecycle_notifier_unittest.cc",
    "../browser/network_service/android_stream_reader_url_loader_unittest.cc",
    "../browser/network_service/input_stream_reader_unittest.cc",
    "../browser/permission/media_access_permission_request_unittest.cc",
    "../browser/permission/permission_request_handler_unittest.cc",
    # "../browser/renderer_host/auto_login_parser_unittest.cc",
    "../browser/scoped_add_feature_flags_unittests.cc",
    "../browser/state_serializer_unittest.cc",
    "../lib/bisonview_tests.cc",
  ]

  deps += [ "//v8:v8_external_startup_data_assets" ]
}

android_assets("bison_view_unittests_assets") {
  sources = [ "unittest/assets/asset_file.ogg" ]
}

android_library("bison_view_unittests_java") {
  testonly = true
  deps = [
    "//bison:bison_java",
    "//base:base_java",
    "//content/public/test/android:content_java_test_support",
  ]
  sources = [
    "../unittestjava/src/im/shimo/bison/unittest/InputStreamUnittest.java",
    "../unittestjava/src/im/shimo/bison/unittest/MockBvContentsClientBridge.java",
  ]
}

generate_jni("bison_view_unittests_jni") {
  testonly = true
  sources = [
    "../unittestjava/src/im/shimo/bison/unittest/InputStreamUnittest.java",
    "../unittestjava/src/im/shimo/bison/unittest/MockBvContentsClientBridge.java",
  ]
}
