
import("//build/config/android/rules.gni")
import("//testing/test.gni")
import("//tools/v8_context_snapshot/v8_context_snapshot.gni")

testonly = true
group("test") {
  deps = [
    # ":android_webview_junit_tests",
    ":bison_view_unittests",
  ]
}



test("bison_view_unittests") {
  deps = [
    ":bison_view_unittests_assets",
    ":bison_view_unittests_java",
    ":bison_view_unittests_jni",
    "//bison/browser",
    "//bison/browser/lifecycle",
    "//bison/common",
    "//base/test:test_support",
    "//components/autofill/core/browser",
    "//components/metrics",
    "//components/prefs:prefs",
    "//components/prefs:test_support",
    "//content:content",
    "//content/test:test_support",
    "//mojo/core/embedder",
    "//net:net",
    "//net:test_support",
    "//services/network:test_support",
    "//ui/base:ui_base_jni_headers",
    "//ui/gl",
    "//ui/gl:test_support",
  ]

  sources = [
    "../browser/bv_browser_context_unittest.cc",
    "../browser/bv_content_browser_client_unittest.cc",
    "../browser/bv_contents_client_bridge_unittest.cc",
    "../browser/bv_form_database_service_unittest.cc",
    "../browser/bv_media_url_interceptor_unittest.cc",
    "../browser/bv_permission_manager_unittest.cc",
    "../browser/input_stream_unittest.cc",
    "../browser/lifecycle/bv_contents_lifecycle_notifier_unittest.cc",
    "../browser/network_service/android_stream_reader_url_loader_unittest.cc",
    "../browser/network_service/input_stream_reader_unittest.cc",
    "../browser/permission/media_access_permission_request_unittest.cc",
    "../browser/permission/permission_request_handler_unittest.cc",
    # "../browser/renderer_host/auto_login_parser_unittest.cc",
    "../browser/scoped_add_feature_flags_unittests.cc",
    "../browser/state_serializer_unittest.cc",
    "../lib/bisonview_tests.cc",
  ]

  deps += [ "//v8:v8_external_startup_data_assets" ]
}

android_assets("bison_view_unittests_assets") {
  sources = [ "unittest/assets/asset_file.ogg" ]
}

android_library("bison_view_unittests_java") {
  testonly = true
  deps = [
    "//bison:bison_java",
    "//base:base_java",
    "//content/public/test/android:content_java_test_support",
  ]
  sources = [
    "../unittestjava/src/im/shimo/bison/unittest/InputStreamUnittest.java",
    "../unittestjava/src/im/shimo/bison/unittest/MockBvContentsClientBridge.java",
  ]
}

generate_jni("bison_view_unittests_jni") {
  testonly = true
  sources = [
    "../unittestjava/src/im/shimo/bison/unittest/InputStreamUnittest.java",
    "../unittestjava/src/im/shimo/bison/unittest/MockBvContentsClientBridge.java",
  ]
}

instrumentation_test_apk("bisonview_instrumentation_test_apk"){
  apk_name = "BisonViewInstrumentationTest"
  apk_under_test = "//bison/shell:bison_shell_apk"
  min_sdk_version = default_min_sdk_version
  android_manifest = "AndroidManifest.xml"

  deps = [
    # ":webview_instrumentation_test_mock_services_java",
    # ":webview_instrumentation_test_utils_java",
    "//bison:bison_java",
    # "//android_webview:common_aidl_java",
    # "//android_webview:common_crash_java",
    # "//android_webview:common_platform_services_java",
    # "//android_webview:common_variations_java",
    # "//android_webview/js_sandbox:js_sandbox_aidl_java",
    # "//android_webview/js_sandbox:js_sandbox_java",
    # "//android_webview/nonembedded:devui_java",
    # "//android_webview/nonembedded:services_java",
    # "//android_webview/proto:aw_variations_seed_proto_java",
    # "//android_webview/proto:metrics_bridge_records_proto_java",
    # "//android_webview/test/embedded_test_server:aw_net_java_test_support",
    "//base:base_java",
    "//base:base_java_test_support",
    "//base:jni_java",
    "//build/android:build_java",
    "//components/android_autofill/browser:java",
    "//components/android_autofill/browser/test_support:component_autofill_provider_java_test_support",
    "//components/autofill/android:autofill_java",
    "//components/autofill/core/common/mojom:mojo_types_java",
    "//components/background_task_scheduler:background_task_scheduler_task_ids_java",
    "//components/component_updater/android:component_provider_service_aidl_java",
    "//components/component_updater/android:embedded_component_loader_java",
    "//components/content_capture/android:java",
    "//components/content_capture/android/test_support:java",
    "//components/embedder_support/android:util_java",
    "//components/embedder_support/android:web_contents_delegate_java",
    "//components/embedder_support/android/metrics:java",
    "//components/heap_profiling/multi_process:heap_profiling_java_test_support",
    "//components/metrics:metrics_java",
    "//components/minidump_uploader:minidump_uploader_java",
    "//components/minidump_uploader:minidump_uploader_java_test_support",
    "//components/policy/android:policy_java",
    "//components/policy/android:policy_java_test_support",
    "//components/safe_browsing/android:safe_browsing_java",
    "//components/variations/android:variations_java",
    "//components/variations/proto:proto_java",
    "//components/version_info/android:version_constants_java",
    "//components/viz:viz_java",
    "//content/public/android:content_java",
    "//content/public/test/android:content_java_test_support",
    "//mojo/public/java:bindings_java",
    "//net/android:net_java",
    "//net/android:net_java_test_support",
    "//services/device/public/java:geolocation_java",
    "//services/device/public/java:geolocation_java_test_support",
    "//third_party/android_deps:com_google_code_findbugs_jsr305_java",
    "//third_party/android_deps:com_google_guava_failureaccess_java",
    "//third_party/android_deps:com_google_guava_listenablefuture_java",
    "//third_party/android_deps:espresso_java",
    "//third_party/android_deps:guava_android_java",
    "//third_party/android_deps:guava_android_java",
    "//third_party/android_deps:protobuf_lite_runtime_java",
    "//third_party/android_support_test_runner:rules_java",
    "//third_party/android_support_test_runner:runner_java",
    "//third_party/androidx:androidx_activity_activity_java",
    "//third_party/androidx:androidx_annotation_annotation_java",
    "//third_party/androidx:androidx_core_core_java",
    "//third_party/androidx:androidx_fragment_fragment_java",
    "//third_party/androidx:androidx_test_core_java",
    "//third_party/androidx:androidx_test_rules_java",
    "//third_party/androidx:androidx_test_runner_java",
    "//third_party/blink/public/common:common_java",
    "//third_party/blink/public/mojom:mojom_platform_java",
    "//third_party/blink/public/mojom:web_feature_mojo_bindings_java",
    "//third_party/hamcrest:hamcrest_java",
    "//third_party/junit",
    "//third_party/metrics_proto:metrics_proto_java",
    "//third_party/mockito:mockito_java",
    "//ui/android:ui_java",
    "//ui/android:ui_java_test_support",
    "//url:gurl_java",
  ]

  sources = [
    "src/im/shimo/bisonview/test/AndroidProtocolHandlerTest.java",
    "src/im/shimo/bisonview/test/BvActivityTestRule.java",
  ]

  data = [ "data/" ]
  data_deps =
      [ "//testing/buildbot/filters:webview_instrumentation_test_apk_filters" ]
  additional_apks = [
    "//net/android:net_test_support_apk",
  ]
}
