# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("gpu") {
  sources = [
    "bison_content_gpu_client.cc",
    "bison_content_gpu_client.h",
  ]

  deps = [
    "//base",
    "//content/public/gpu",
  ]
}
