source_set("metrics") {
  sources = [
    # "bison_metrics_log_uploader.cc",
    # "bison_metrics_log_uploader.h",
    "bv_metrics_service_client.cc",
    "bv_metrics_service_client.h",
    "renderer_process_metrics_provider.cc",
    "renderer_process_metrics_provider.h",
    "visibility_metrics_logger.cc",
    "visibility_metrics_logger.h",
    "visibility_metrics_provider.cc",
    "visibility_metrics_provider.h",
  ]
  deps = [
    "//bison:bison_jni_headers",
    "//bison/browser/lifecycle",
    "//bison/common",

    "//base",
    #jiang947 begin 先加上，后面可能需要删除
    "//components/component_updater",
    "//components/component_updater/android:embedded_component_loader",
    # jiang947 end
    "//components/embedder_support/android/metrics",
    "//components/metrics",
    "//components/metrics:component_metrics",
    "//components/prefs",
    "//components/version_info/android:channel_getter",
    "//content/public/browser",
  ]
}
